# SULLEY

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: python-app.yaml
src/sulley/: __init__.py  extract_neighbors.py  local_frame.py  rotation_matrix.py  sulley.py  sulley_main.py  symmetry.py  write_file.py
test/: test_rotation_matrix.py  test_symmetry.py  test_write_file.py
test/poltype/: multipole.py  poltype.py  symmetry_poltype.py  test_loader.py  test_with_poltype.py
test/poltype/output/: aspirin_lf_poltype.txt  aspirin_lf_sulley.txt  benzene_lf_poltype.txt  benzene_lf_sulley.txt  ethanol_lf_poltype.txt  ethanol_lf_sulley.txt  lactic_lf_poltype.txt  lactic_lf_sulley.txt  trimethylamine_lf_poltype.txt  trimethylamine_lf_sulley.txt
test/poltype/structures/: aspirin.sdf  aspirin.xyz  aspirin_ethanol.xyz  benzene.sdf  ethanol.sdf  lactic.sdf  trimethylamine.sdf
